--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <p>Image 1</p>
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" >
+    <p>Image 2</p>
+    <img src="https://hips.hearstapps.com/hmg-prod/images/23c0231-003-64b575a34526f.jpg?crop=0.736xw:0.550xh;0.0527xw,0.326xh&resize=1200:*" alt="Mercedes Benz">
+    <p>Image 3</p>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQR5cS9xymo-mF_-amQQlpeZ8LV09jEQlKWmA&s" alt="Enzo Fernandez" title="Chelsea Captain">
   </body>
 </html>
